# deptreehs

./: LICENSE  README.md  RTree.hs  UDAnalysis.hs  UDConcepts.hs  UDEval.hs  UDPatterns.hs  UDPipe2.hs  UDStandard.hs  UDTrees.hs  UDVisualizations.hs  Utils.hs  VisualizeUD.hs  deptreehs.cabal  stack.yaml
