name: deptreehs
version: 0
synopsis: Haskell utilities for dependency trees, replicating some of gf-ud
license: BSD2
license-file: LICENSE
author: Arianna Masciolini
maintainer: arianna.masciolini@gu.se
category: Language
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10

library
   exposed-modules:
      RTree,
      UDAnalysis,
      UDConcepts,
      UDOptions,
      UDPatterns,
      UDStandard,
      UDVisualizations
   build-depends:
      base,
      containers,
      split,
      pretty
   default-language: Haskell2010