name: deptreehs
version: 0
synopsis: Haskell utilities for dependency trees, replicating some of gf-ud
license: BSD2
license-file: LICENSE
author: Arianna Masciolini
maintainer: arianna.masciolini@gu.se
category: Language
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10

library
   exposed-modules:
      RTree,
      UDStandard,
      UDTrees,
      UDAnalysis,
      UDPatterns,
      UDVisualizations,
      UDPipe2
   other-modules:
      Utils
   build-depends:
      base,
      containers,
      split,
      pretty,
      utf8-string,
      aeson,
      curl
   default-language: Haskell2010